@@ -14,6 +14,8 @@ python-apt (0.8.1) UNRELEASED; urgency=low
       experimental
   * tests/test_apt_cache.py:
     - fix test by providing proper fixture data
+    - fix test if sources.list is not readable (as is the case on some
+      PPA buildds)
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 07 Jun 2011 14:00:22 +0200
 
